test/Translate/Ops/for.p4.ref
error: loc("test/Translate/Ops/for.p4":21:40): Unsupported operation 'p4hir.const' in for-loop update clause
note: loc("test/Translate/Ops/for.p4":21:40): see current operation: %7 = "p4hir.const"() <{value = #p4hir.int<1> : !p4hir.bit<32>}> : () -> !p4hir.bit<32>
  19 |         // CHECK:      } body {
  20 |         // CHECK:        %[[CONST_1:.*]] = p4hir.const #int1_b32i
  21 |         // CHECK:        %[[CURR_SUM:.*]] = p4hir.read %[[SUM]] : <!b32i>
     |                                        ^
  22 |         // CHECK:        %[[NEW_SUM:.*]] = p4hir.binop(add, %[[CURR_SUM]], %[[CONST_1]]) : !b32i
  23 |         // CHECK:        p4hir.assign %[[NEW_SUM]], %[[SUM]] : <!b32i>
